--- a/src/componentes/Login/Login.css
+++ b/src/componentes/Login/Login.css
@@ -1,3 +1,30 @@
 .login-title{
-    color: indianred;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    padding: 50px;
+}
+
+.btn-registro-login{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 200px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: black;
+    border: solid 1px transparent;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    transition: all 300ms;
+}
+
+.btn-registro-login:hover{
+    background: rgba(255, 255, 255, 0.096);
+    color: white;
+    border: solid 1px white;
+    font-weight: bold;
 }
