--- a/src/componentes/Registro/Registro.css
+++ b/src/componentes/Registro/Registro.css
@@ -1,3 +1,47 @@
-.registro-title{
-    color: blueviolet;
+.registro-title {
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    padding: 50px;
+}
+
+.form-container {
+    width: 80%;
+    height: 365px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.registro-form {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.registro-input {
+    display: block;
+    width: 60%;
+    height: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+    background-color: transparent;
+    border-top: solid 1px transparent;
+    border-right: solid 1px transparent;
+    border-left: solid 1px transparent;
+}
+
+::placeholder{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    color: white;
+    padding-left: 7px;
+}
+
+::placeholder:focus{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    color: purple;
+    padding-left: 7px;
 }
