--- a/src/componentes/general/Home/Home.css
+++ b/src/componentes/general/Home/Home.css
@@ -1,3 +1,45 @@
 .Home-title{
-    color: dodgerblue;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.52);
+    padding: 50px;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+}
+.home{
+    margin-top: 40px;
+    height: 465px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+.home-container{
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+
+.home-button{
+    width: 40%;
+    height: 50px;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    color: rgb(207, 203, 203);
+    font-weight: bold;
+    border: solid 2px rgb(173, 173, 173);
+    background-color: #2f3e47;
+    transition: all 300ms;
+    border-radius: 30px;
+    
+}
+
+.home-button:hover{
+    background-color: rgba(0, 0, 0, 0.52);
+    color: white;
+    border: solid 2px black;
+}
+
+body{
+    background-color: #2f3e47;
 }
