se agrega logica de login con mensaje de error (funciona todo), y registro y mensaje de error (no funciona registro)

--- a/src/componentes/Registro/Registro.css
+++ b/src/componentes/Registro/Registro.css
@@ -39,9 +39,16 @@
     padding-left: 7px;
 }
 
-::placeholder:focus{
+.registro-input:focus{
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
-    color: purple;
+    color: white;
+    padding-left: 7px;
+}
+
+.registro-input:focus::after{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    color: white;
     padding-left: 7px;
 }
