--- a/src/componentes/Dashboard/DashboardContainer.css
+++ b/src/componentes/Dashboard/DashboardContainer.css
@@ -1,3 +1,11 @@
 .dashboard-title{
-    color: cornflowerblue;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    padding: 50px;
+}
+
+.dashContainer{
+    height: 507px;
 }
