se agregan componentes de tarjetas training

--- a/src/componentes/Dashboard/DashboardContainer.css
+++ b/src/componentes/Dashboard/DashboardContainer.css
@@ -9,3 +9,24 @@
 .dashContainer{
     height: 507px;
 }
+
+.minutos{
+    background-color: gray;
+    height: 30px;
+    margin: 10px;
+}
+
+.btnAgregar{
+    width: 100px;
+    height: 35px;
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+.lblAgregar{
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+}
